kubernetes/apps/default/outline/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: outline
    app.kubernetes.io/instance: outline
    app.kubernetes.io/name: outline
  name: outline
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: outline
  template:
    metadata:
      labels:
        app: outline
        app.kubernetes.io/name: outline
    spec:
      containers:
      - image: outlinewiki/outline:0.86.1
        name: outline
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
