kubernetes/apps/default/outline/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: outline
  name: outline
spec:
  ports:
  - name: web-tcp
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: outline
